--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backend-challenge",
   "version": "1.0.0",
   "description": "<p align=\"center\">\r   <img src=\"https://github.com/datasmartlab/backend-challenge/blob/main/.github/assets/logo.png\" height=\"150\" width=\"150\" alt=\"Datasmart\" />\r </p>",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -e ts,json src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,20 @@
   },
   "homepage": "https://github.com/gutvo/backend-challenge#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "typescript": "^5.1.3"
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.4.0",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.32.1",
+    "typescript": "^5.1.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
